crates/engine/tests/compile_fail/torque_command_without_safety.stderr
error[E0616]: field `rt_thread` of struct `Engine` is private
  --> tests/compile_fail/torque_command_without_safety.rs:18:26
   |
18 |     let _device = engine.rt_thread;
   |                          ^^^^^^^^^ private field
